fancied-up the sponsor page

--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
 <article>
 <h1><img src="inc/lulaleasuretime.png" alt="LuLaLeasure Time"></h1>
 <h2>LuLaLeasure Time with <a href="mailto:lulaleasuretime@gmail.com">Stacy Leasure</a></h2>
+<p><a href="https://mylularoe.com/join/LuLaLeasure-Time">Sign up</a>
 </article>
