--- a/sponsering.html
+++ b/sponsering.html
@@ -14,20 +14,42 @@
     font-family: "maven";
     src: url("/lib/MavenProLight-300.otf") format("opentype");
 }
-@font-face {
-    font-family: "steelfish";
-    src: url("/lib/steelfish rg.ttf") format("opentype");
-}
 
 html {padding: 10px 10px 200px; font-family: exljbris; }
 body {margin: 0 auto; max-width: 580px; }
+a, a:visited {color: #8bb8e8; font-weight: bold; }
+a:hover {color: #9595d2; }
+
+header {overflow: auto; margin-bottom: 32px; }
+header img {
+    margin-right: 16px;
+    width: 64px;
+    float: left;
+}
+header h2 {
+    margin: 8px 0;
+    color: #888b8d;
+    font-family: maven;
+}
+header p {
+    margin: 0;
+}
+
 article > *:first-child {margin-top: 0; }
+article h1 {font-size: 36px; color: #ff9d68; }
+article h2 {font-size: 28px; color: #f97599; }
+article h3 {font-size: 22px; color: #dd7fd3; }
+article h4 {font-size: 20px; color: #fed141; }
+article h5 {font-size: 18px; color: #888b8d; }
+
 article p {line-height: 1.4em; font-size: 17px; font-family: maven; }
 article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-family: maven; }
 </style>
 </head>
 
 <body>
+
+<!--#include virtual="inc/header.pht" -->
 
 <nav id="menu">
 <!--#include virtual="inc/nav.pht" -->
@@ -48,7 +70,7 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 
 <p>The initial package and the optional package add on! I will text you the latest on boarding kit! Please remember that because the Queue is a 8-10 week wait, this on boarding package can change several times before you on board.
 
-<h2><a href="https://youtu.be/YLT3Ti_R2vA">The DeAnne interview video</a></h2>
+<h2><a href="https://youtu.be/YLT3Ti_R2vA">The DeAnne Interview Video</a></h2>
 
 <p>I have heard from everyone how amazing DeAnne is! She takes time to meet with each consultant and treats everyone as if they are family!  She truly wants everyone to be successful in this business! I met her at the Inspire Las Vegas this past June, during a leggings party. The next day  I started a crowd chant during the on boarding lottery and they decided to pick EVERYONE! LOL good times :)
 
@@ -114,14 +136,14 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 <p><a href="http://amzn.com/B00K7II6P6">6x9 – (for sending 1 pair of leggings) $8.95 for a 100 pack</a>
 <p><a href="http://amzn.com/B00JW4IZWK">10x13 – (for sending 1 dress/shirt) $11.99 for a 100 pack</a>
 
-UPAKC.com is the cheapest I have found, however; only use PayPal, as they have had fraud issues that I read about online.
+<p>UPAKC.com is the cheapest I have found, however; only use PayPal, as they have had fraud issues that I read about online.
 
-<h3>USPS Mailers - Free on USPS.com</h3>
+<h3>USPS Mailers - <a href="https://store.usps.com/store/">Free on USPS.com</a></h3>
 <p>Priority Mail Padded Flat Rate Envelope 9-1/2" x 12-1/2" (for people who upgrade to priority mail)
 <p>Priority Mail Medium Flat Rate Box #2 - 11-7/8" x 3-3/8" x 13-5/8" (for large orders)
 
 <h3>Shipping Labels</h3>
-<p>(If using Stamps.com or ShippingEasy.com.)
+<p>(If using <a href="http://www.stamps.com/">Stamps.com</a> or <a href="http://shippingeasy.com/">ShippingEasy.com</a>.)
 <p><a href="http://amzn.com/B000ANJW1U">Avery 5126 - $23.64 for Box of 200</a>
 
 <h3>Label Printer</h3>
@@ -146,7 +168,7 @@ UPAKC.com is the cheapest I have found, however; only use PayPal, as they have h
 <p>(For in home pop-ups/vendor events.) I ended up purchasing <a href="http://www.papermart.com/colored-paper-merchandise-bags/id=3734#3734">paper bags</a>, you can look around and find cheaper plastic bags should you choose.
 
 <h3>Thank You Cards/Washing Instructions</h3>
-<p>Lots of options – create your own or shop around)
+<p>Lots of options – create your own or shop around.
 <p><a href="https://www.etsy.com/listing/273860372/lularoe-customer-thank-you-card-lularoe">Etsy - $9.00 Digital Download</a>
 <p><a href="http://ahaugendesign.com/products/4x6-cards">This is a fellow LLR Consultant</a>, she is by far the cheapest I've found for care cards.
 
@@ -190,13 +212,13 @@ UPAKC.com is the cheapest I have found, however; only use PayPal, as they have h
 
 <h2>Resources</h2>
 <ul>
-<li><a href="APPLICATION.pdf">Application.pdf</a>
-<li><a href="How-Long-to-Pay-Back-Investment.pdf">How-Long-to-Pay-Back-Investment.pdf</a>
-<li><a href="LLR Policies &amp; Procedures4.27.15.pdf">LLR Policies &amp; Procedures4.27.15.pdf</a>
-<li><a href="LuLaRoe Business Overview 20160115.pdf">LuLaRoe Business Overview 20160115.pdf</a>
-<li><a href="Onboarding Checklist.pdf">Onboarding Checklist.pdf</a>
-<li><a href="Onboarding Packages.jpg">Onboarding Packages.jpg</a>
-<li><a href="Credit-Card-Options.docx">Credit-Card-Options.docx</a>
+<li><a href="/downloads/APPLICATION.pdf">Application.pdf</a>
+<li><a href="/downloads/How-Long-to-Pay-Back-Investment.pdf">How-Long-to-Pay-Back-Investment.pdf</a>
+<li><a href="/downloads/LLR Policies &amp; Procedures4.27.15.pdf">LLR Policies &amp; Procedures4.27.15.pdf</a>
+<li><a href="/downloads/LuLaRoe Business Overview 20160115.pdf">LuLaRoe Business Overview 20160115.pdf</a>
+<li><a href="/downloads/Onboarding Checklist.pdf">Onboarding Checklist.pdf</a>
+<li><a href="/downloads/Onboarding Packages.jpg">Onboarding Packages.jpg</a>
+<li><a href="/downloads/Credit-Card-Options.docx">Credit-Card-Options.docx</a>
 </ul>
 
 </article>
