--- a/sponsering.html
+++ b/sponsering.html
@@ -49,11 +49,11 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 
 <body>
 
-<!--#include virtual="inc/header.pht" -->
-
-<nav id="menu">
-<!--#include virtual="inc/nav.pht" -->
-</nav>
+<header>
+    <img src="/inc/llr.png" alt="">
+    <h2>LuLa Leasure Time</h2>
+    <p><a href="https://www.facebook.com/groups/lularoestacyleasure/">LuLaRoe Stacy Leasure-Broski</a>
+</header>
 
 <article>
 <h1>LuLaRoe Fashion Consultant Business Overview</h1>
