--- a/sponsering.html
+++ b/sponsering.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-<title>LuLaLeasure Time</title>
+<link rel="icon" type="image/png" href="/inc/llr.png">
+<title>LuLaRoe Fashion Consultant Business Overview - LuLaLeasure Time</title>
 
 <style type="text/css">
 @font-face {
@@ -51,7 +52,7 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 
 <header>
     <img src="/inc/llr.png" alt="">
-    <h2>LuLa Leasure Time</h2>
+    <h2>LuLaLeasure Time</h2>
     <p><a href="https://www.facebook.com/groups/lularoestacyleasure/">LuLaRoe Stacy Leasure-Broski</a>
 </header>
 
