--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<link rel="icon" type="image/png" href="/inc/llr.png">
 <title>LuLaLeasure Time</title>
 <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="inc/main.css">
