--- a/sponsering.html
+++ b/sponsering.html
@@ -78,28 +78,28 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 <p>Once you are ready to sign up you need to do the following:
 
 <ol>
-    <li>Create an account at https://mylularoe.com/join/LuLaLeasure-Time (My ID is 61799.) Please be sure to use your first name and last name in all capital letters for your Public ID (for example STACYLEASUREBROSKI)
+    <li>Create an account at <a href="https://mylularoe.com/join/LuLaLeasure-Time">https://mylularoe.com/join/LuLaLeasure-Time</a> (My ID is 61799.) Please be sure to use your first name and last name in all capital letters for your Public ID (for example STACYLEASUREBROSKI).
     <li>Activate your account once they send you the activation email
-    <li>Sign and scan a copy or take photos with your phone of the attached consultant agreement, the onboarding checklist and send that along with a copy of a voided check (for your direct deposit) to onboarding@lularoe.com
+    <li>Sign and scan a copy or take photos with your phone of the attached consultant agreement, the onboarding checklist and send that along with a copy of a voided check (for your direct deposit) to <a href="mailto:onboarding@lularoe.com">onboarding@lularoe.com</a>.
     <li>LuLaRoe will send you an email or call you once they are ready to Onboard you, usually within 6-8 Weeks.
     <li>LuLaRoe will call you place your initial order from a number close to this 951-737-7875
-    <li>Create a business email address. Please use LuLaRoe and your name. However, do not use your location, city or state. lularoe.stacyleasure@gmail.com for example. Its best to use gmail because you will need it for your goggle doc’s.
+    <li>Create a business email address. Please use LuLaRoe and your name. However, do not use your location, city or state. <a href="lularoe.stacyleasure@gmail.com">lularoe.stacyleasure@gmail.com</a> for example. Its best to use gmail because you will need it for your goggle doc’s.
     <li>Set up your business Facebook and Instagram pages. Please use your first and last name! Here are examples of my accounts:
         <ul>
-            <li>Facebook Sale Group: https://www.facebook.com/groups/lularoestacyleasure/
-            <li>Facebook Business Page: https://www.facebook.com/Lularoe-Stacy-Leasure-853741681436303/
-            <li>Instagram: https://www.instagram.com/lulaleasuretime/
-            <li>Periscope: https://www.periscope.tv/LuLaLeasureTime/1LyGBbeWMqjGN
-            <li>Twitter: https://twitter.com/LuLaLeasureTime
-            <li>YouTube: https://www.youtube.com/channel/UCvWzazx8jw4kUy58FyqejJg
-            <li>Pintrest: https://www.pinterest.com/leasurebroski/
+            <li>Facebook Sale Group: <a href="https://www.facebook.com/groups/lularoestacyleasure/">https://www.facebook.com/groups/lularoestacyleasure/</a>
+            <li>Facebook Business Page: <a href="https://www.facebook.com/Lularoe-Stacy-Leasure-853741681436303/">https://www.facebook.com/Lularoe-Stacy-Leasure-853741681436303/</a>
+            <li>Instagram: <a href="https://www.instagram.com/lulaleasuretime/">https://www.instagram.com/lulaleasuretime/</a>
+            <li>Periscope: <a href="https://www.periscope.tv/LuLaLeasureTime/1LyGBbeWMqjGN">https://www.periscope.tv/LuLaLeasureTime/1LyGBbeWMqjGN</a>
+            <li>Twitter: <a href="https://twitter.com/LuLaLeasureTime">https://twitter.com/LuLaLeasureTime</a>
+            <li>YouTube: <a href="https://www.youtube.com/channel/UCvWzazx8jw4kUy58FyqejJg">https://www.youtube.com/channel/UCvWzazx8jw4kUy58FyqejJg</a>
+            <li>Pintrest: <a href="https://www.pinterest.com/leasurebroski/">https://www.pinterest.com/leasurebroski/</a>
         </ul>
     <li>I will add you to our team pages once you have onboarded! Our teams are Team LuLaPreneurs and Team LLR Boss ladies. Our LuLaRoe Mentor is Jamie Bagley!
     <li>I will add you to the corporate page called the LuLaRoe Skirts Associates Page. You need to be on this page to be added to events, like local training's.
     <li>Determine business structure – DBA, Sole Proprietor, LLC
     <li>Register with state and federal entities. Check with your city to see if you need a business license. You do not have to collect sales tax! Audrey enables LuLaRoe to do it for us!
     <li>Set up 2 business bank accounts and 1 savings account. The first checking account will be your main account. You deposit your money from boutiques into this account and you will keep money in here to pay for orders and consignment. The second account is where you can deposit your profit. The savings account can be used to save @ 25% of the profit to use for income tax next April.
-    <li>Set up an account with USPS.com  and Shipping Easy http://shippingeasy.com/easyreferral/?c=8EZ27D69
+    <li>Set up an account with USPS.com and <a href="http://shippingeasy.com/easyreferral/?c=8EZ27D69">Shipping Easy</a>
     <li>Begin the 72 Hour Game Plan. You can find a document about this in Audrey. Go to Tools/Assets. Then go to Documents. This is essential to a great start with your business. I did the 72 Hour Game plan and it works! This is the 72 Hour Game Plan!
         <ol>
             <li>Commit to “Building your Business” (you are doing this by completing this list)
@@ -114,13 +114,13 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 
 <p>Here is a list of back office supplies we suggest, you can obviously purchase from other places too and you don’t need all right away! Once you sign up, I can add you to multiple FaceBook groups that can help with decisions.
 
-<p>Order business cards - You can order them using LuLaRoe's print shop lularoecustom.com, or make a design and order through VistaPrint
+<h3>Order Business Cards</h3>
+<p>You can order them using LuLaRoe's print shop lularoecustom.com, or make a design and order through VistaPrint
 
-<p>Collapsible rolling racks - Econoco Heavy Duty Collapsible Garment Rack - 1 rack holds 75-100 pieces
-
+<h3>Collapsible Rolling Racks</h3>
+<p>Econoco Heavy Duty Collapsible Garment Rack - 1 rack holds 75-100 pieces
 <p><a href="http://amzn.com/B00NQWLX0A">Amazon - $59.95/each</a>
-
-<p>Ikea has some that are 13$, I purchased these to save money in the beginning.
+<p>Ikea has some that are $13. I purchased these to save money in the beginning.
 
 <h3>Velvet Hangers</h3>
 <p>Costco - $9.89 for a 35 pack
@@ -144,11 +144,11 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 <p>Priority Mail Medium Flat Rate Box #2 - 11-7/8" x 3-3/8" x 13-5/8" (for large orders)
 
 <h3>Shipping Labels</h3>
-<p>(If using <a href="http://www.stamps.com/">Stamps.com</a> or <a href="http://shippingeasy.com/">ShippingEasy.com</a>.)
+<p>(If using <a href="http://www.stamps.com/">Stamps.com</a> or <a href="http://shippingeasy.com/easyreferral/?c=8EZ27D69">ShippingEasy.com</a>.)
 <p><a href="http://amzn.com/B000ANJW1U">Avery 5126 - $23.64 for Box of 200</a>
 
 <h3>Label Printer</h3>
-(Not necessary but makes shipping faster &amp; easier.)
+<p>(Not necessary but makes shipping faster &amp; easier.)
 <p><a href="http://amzn.com/B002M1LGJ4">DYMO LabelWriter 4XL Thermal Label Printer (1755120), Amazon</a>
 <p><a href="http://amzn.com/B001U729QK">DYMO LabelWriter Shipping Labels, White, 4” x 6”, 220 per pack, Amazon - $16.99</a>
 
