changed sponser file name

--- a/join-lularoe.html
+++ b/join-lularoe.html
@@ -199,7 +199,7 @@ article li {margin-bottom: 0.3em; line-height: 1.4em; font-size: 16px; font-fami
 
 <p>Please contact the home office with questions as a last resort. LuLaRoe is growing like CRAZY, so the phones stay so busy. If I can help you with a question, we can save them some time!
 
-<p>Spend time getting to know Audrey while you await your BOXES! There are video galore on YouTube that you can watch while you are waiting to onboard!
+<p>Spend time getting to know Audrey while you await your BOXES! There are videos galore on YouTube that you can watch while you are waiting to onboard!
 
 <p>At your first few Pop Ups, I suggest you encourage shoppers to purchase with cash or check so that you have “quick cash” to turn around, reinvest and grow your inventory. Once you have paid yourself back and have had time to grow a large enough inventory, this becomes less of an issue!
 
