new layout with photo

--- a/index.html
+++ b/index.html
@@ -7,16 +7,34 @@
 <title>LuLaLeasure Time</title>
 <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="inc/main.css">
+<script src="https://use.fontawesome.com/d7031fd718.js"></script>
+<style>
+</style>
 </head>
 
 <body>
 
-<nav id="menu">
-<!--#include virtual="inc/nav.pht" -->
-</nav>
+<header>
+<h2><img src="/inc/LuLaRoe.png" alt="LuLaRoe"></h2>
+</header>
 
 <article>
-<h1><img src="inc/lulaleasuretime.png" alt="LuLaLeasure Time"></h1>
-<h2>LuLaLeasure Time with <a href="mailto:lulaleasuretime@gmail.com">Stacy Leasure</a></h2>
-<p><a href="https://mylularoe.com/join/LuLaLeasure-Time">Sign up</a>
+
+<section>
+<img src="/inc/lularoe_stacy.jpg" alt="">
+</section>
+
+<section>
+<h3>Stacy Leasure-Broski</h3>
+<p id="email"><a href="mailto:lularoestacyleasure@gmail.com"><i class="fa fa-envelope-o"></i>lularoestacyleasure@gmail.com</a></p>
+<p id="facebook"><a href="https://www.facebook.com/groups/lularoestacyleasure/"><i class="fa fa-facebook"></i>LuLaRoe Stacy Leasure-Broski</a></p>
+<p id="periscope"><a href="https://www.periscope.tv/"><i class="fa fa-map-marker"></i>LuLaLeasureTime</a></p>
+<p id="instagram"><a href="https://www.instagram.com/lulaleasuretime/"><i class="fa fa-instagram"></i>lularoestacyleasure</a></p>
+<p id="youtube"><a href="https://www.youtube.com/channel/UCvWzazx8jw4kUy58FyqejJg"><i class="fa fa-youtube"></i>LuLaRoe Stacy Leasure-Broski</a></p>
+</section>
+
+<!--<h2>LuLaLeasure Time with <a href="mailto:lulaleasuretime@gmail.com">Stacy Leasure</a></h2>
+    Stacy Leasure-Broski<h2>
+
+<p><a href="https://mylularoe.com/join/LuLaLeasure-Time">Sign up</a>-->
 </article>
