--- a/lularizer-wireframe/new.html
+++ b/lularizer-wireframe/new.html
@@ -19,10 +19,8 @@ h1 {font-family: steelfish; }
 
 <article>
 <h1>LuLaRizer</h1>
-<h2>Manage Inventory Photos</h2>
-<p>Remove, edit, upload inventory photos.
-<h2><a href="new">Add Inventory Photos</a></h2>
-<p>Take new photos, or select from an album.
+<h2><a href="">Take Photo</a></h2>
+<h2><a href="">Select from Album</a></h2>
 </article>
 
 <script>
