--- a/lularizer-wireframe/reset.html
+++ b/lularizer-wireframe/reset.html
@@ -7,18 +7,9 @@
 </style>
 
 <article>
-<h1>LuLaRizer</h1>
-
-<h2>Add Inventory</h2>
-<p><button onclick="location='new'">From Camera</button>
-<p><button>From Collection</button>
-
-<h2>Manage Inventory</h2>
-<p><button onclick="location='inventory'">Edit and Delete</button>
-<p><button>Upload to Facebook</button>
-
+<h1>Reset</h1>
 </article>
 
 <script>
-
+localStorage.removeItem('inventory');
 </script>
