added margin to inventory photos

--- a/lularizer-wireframe/inventory.html
+++ b/lularizer-wireframe/inventory.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 <link rel="stylesheet" type="text/css" href="main.css">
 <style>
-#inventory img {width: 90px; }
+#inventory img {width: 90px; margin: 4px; }
 h3 {
     font-family: steelfish;
     text-transform: capitalize;
