--- a/lularizer-wireframe/new.html
+++ b/lularizer-wireframe/new.html
@@ -1,24 +1,25 @@
 <!doctype html>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <title>Lularizer Wireframe</title>
 <link rel="stylesheet" type="text/css" href="main.css">
 <style>
 html, footer {
     background: black;
 }
-#fakeCamera {max-width: 100%; }
+#fakeCamera {width: 100%; }
 #photoGuide {
     position: absolute;
     margin-left: -50px;
     margin-top: -100px;
-    top: 50%; left: 50%;
-    border: 1px dashed yellow;
+    top: 40%; left: 50%;
+    border: 2px dashed yellow;
     width: 100px; height: 100px;
 }
 </style>
 
 <article>
-<img src="test.jpg" id="fakeCamera" alt="photo">
+<img src="album/IMG_0094.jpg" id="fakeCamera" alt="photo">
 <div id="photoGuide"></div>
 </article>
 
