--- a/lularizer-wireframe/edit.html
+++ b/lularizer-wireframe/edit.html
@@ -1,20 +1,24 @@
 <!doctype html>
 <title>Lularize Wireframe</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-<link rel="stylesheet" type="text/css" href="main.css">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="stylesheet" href="mdl/material.lime-pink.min.css">
+<script src="mdl/material.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" type="text/css" href="mdl/mdl-custom.css">
 <style>
-h1 {font-size: 18px; }
 canvas {
-    border: 1px solid #333;
+    /*border: 1px solid #333;*/
+    background: #fff;
     max-width: 100%;
 }
 article {padding-bottom: 64px; }
-#watermark {width: 100%; }
+#watermark {width: 100%; font-family: maven; }
 p {margin: 0.5em 0; }
 footer p {margin: 1em 0; }
 
 #colors > div {
-    margin: 0 4px;
+    margin: 0 5px;
     width: 20px; height: 20px;
     display: inline-block;
 }
@@ -37,7 +41,54 @@ footer p {margin: 1em 0; }
 #colorGray {background-color: #888b8d; }
 </style>
 
-<article>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+
+<header class="mdl-layout__header">
+<div class="mdl-layout__header-row">
+<span class="mdl-layout__title"><a href="/lularizer-wireframe/">LuLaRizer</a></span>
+</div>
+</header>
+
+<div class="mdl-layout__drawer">
+<span class="mdl-layout__title">LuLaRizer</span>
+<nav class="mdl-navigation">
+<a class="mdl-navigation__link" href="new" onclick="location='new'; return false; ">Add From Camera</a>
+<a class="mdl-navigation__link" href="#" onclick="return false; ">Add From Collection</a>
+<a class="mdl-navigation__link" href="inventory" onclick="location='inventory'; return false; ">Browse Inventory</a>
+<a class="mdl-navigation__link" href="#" onclick="return false; ">Inventory Audit</a>
+<a class="mdl-navigation__link" href="#" onclick="return false; ">Upload to Facebook</a>
+</nav>
+</div>
+
+<main class="mdl-layout__content">
+<div class="mdl-card mdl-shadow--4dp">
+<div class="mdl-card__media">
+<canvas width="450" height="400" id="preview"></canvas>
+</div>
+<div class="mdl-card__supporting-text">
+    <div id="colors">
+        <div id="colorYellow"></div>
+        <div id="colorOrange"></div>
+        <div id="colorPink"></div>
+        <div id="colorFuchsia"></div>
+        <div id="colorPurple"></div>
+        <div id="colorBlue"></div>
+        <div id="colorGreen"></div>
+    </div>
+
+    <p><label>Style</label> <select id="selectStyle"></select>
+        <label>Size</label> <select id="selectSize"></select>
+    <p><input id="watermark" value="www.LuLaLeasureTime.com">
+</div>
+<div class="mdl-card__actions">
+    <button onclick="history.back()">Cancel</button>
+    <button onclick="save()">Save</button>
+</div>
+</div>
+</main>
+
+</div>
+<!--
 <div id="colors">
     <label>Color</label>
     <div id="colorYellow" class="selectedColor"></div>
@@ -61,7 +112,7 @@ footer p {margin: 1em 0; }
 <button onclick="save()">Add to Inventory</button>
 </footer>
 
-</article>
+</article>-->
 
 <script>
 var colors = {
@@ -150,6 +201,7 @@ function buildStyleUI() {
             selStyle.appendChild(option);
         }
     }
+    selStyle.selectedIndex = localStorage.style;
 
     buildSizeUI();
 }
@@ -195,6 +247,7 @@ function logo(ctx) {
 
 function lularize(newStyle) {
     if (newStyle) {
+        localStorage.style = document.getElementById('selectStyle').selectedIndex;
         buildSizeUI();
     }
 
@@ -205,11 +258,12 @@ function lularize(newStyle) {
     img.addEventListener("load", function() {
         //var //color = document.getElementById('selectColor').value,
         var style = document.getElementById('selectStyle').value,
-            size = document.getElementById('selectSize').value;
+            size = document.getElementById('selectSize').value,
+            lulalroeColor = colors[color];
 
         ctx.lineWidth = 1;
-        ctx.strokeStyle = color;
-        ctx.fillStyle = color;
+        ctx.strokeStyle = lulalroeColor;
+        ctx.fillStyle = lulalroeColor;
         ctx.textAlign = 'center';
         ctx.font = '20px maven';
 
@@ -219,8 +273,8 @@ function lularize(newStyle) {
         // add watermark
         ctx.fillStyle = 'black';
         ctx.fillText(document.getElementById('watermark').value, 152, 392);
-        ctx.strokeStyle = color;
-        ctx.fillStyle = color;
+        ctx.strokeStyle = lulalroeColor;
+        ctx.fillStyle = lulalroeColor;
         ctx.fillText(document.getElementById('watermark').value, 150, 390);
 
         ctx.fillRect(300, 0, 150, 65);
@@ -244,6 +298,7 @@ function lularize(newStyle) {
 }
 
 function save() {
+    /* After save, go back to camera or album */
     var bitmapData = document.getElementById('preview').toDataURL(),
         invString,
         invObj,
@@ -261,6 +316,7 @@ function save() {
     }
     invObj[style].push(bitmapData);
     localStorage.setItem('inventory', JSON.stringify(invObj));
+    history.back();
 }
 
 function getEventTarget(e) {
@@ -310,8 +366,25 @@ function changeColor(e) {
         document.getElementById('colorGreen').className = '';
 
         targ.className = 'selectedColor'
-        color = colors[targ.id];
+        color = targ.id;
+        localStorage.color = targ.id;
         lularize();
+    }
+}
+
+function init() {
+    //console.log(localStorage.color, colors[localStorage.color]);
+    if (localStorage.color && colors[localStorage.color]) {
+        color = localStorage.color;
+        //targ.className = 'selectedColor'
+    } else {
+        color = 'colorYellow';
+    }
+    //console.log(color);
+    document.getElementById(color).className = 'selectedColor'
+
+    if (!localStorage.style && styleData[localStorage.style]) {
+        localStorage.style = 0;
     }
 }
 
@@ -322,6 +395,7 @@ function load() {
     touchclick(document.getElementById('colors'), changeColor);
     document.getElementById('watermark').onchange = lularize;
 
+    init();
     window.setTimeout(function () {lularize(true); }, 50);
 }
 
